Fix table-text-align build error

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -41,6 +41,8 @@ $on-laptop:        800px !default;
   font-size: $base-font-size * $ratio;
 }
 
+$table-text-align: left !default; 
+
 // Import partials.
 @import
   "minima/base",
